--- a/ToDoApi/appsettings.json
+++ b/ToDoApi/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost,5002;Database=TodoAppDb;User Id=sa;Password=Password@123#;MultipleActiveResultSets=true;TrustServerCertificate=True;"
+  },	
   "AllowedHosts": "*"
 }
