--- a/ToDoApi/appsettings.json
+++ b/ToDoApi/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost,5002;Database=TodoAppDb;User Id=sa;Password=Password@123#;MultipleActiveResultSets=true;TrustServerCertificate=True;"
+    "DefaultConnection": "Server=172.20.192.1,5002;Database=TodoAppDb;User Id=sa;Password=Password@123#;MultipleActiveResultSets=true;TrustServerCertificate=True;"
   },	
   "AllowedHosts": "*"
 }
